<resources>
    <string name="app_name">epaketo</string>
    <!-- space dekcia kai aristera-->
    <string name="act1_title">\u0020epaketo\u0020</string>
    <string name="act1_email">Email ID</string>
    <string name="act1_password">Password</string>
    <string name="act1_forgot">Forgot the password?</string>
    <string name="act1_login">Log in</string>
    <string name="act1_singup">Sing up</string>
    <string name="act1_track">Track your packages</string>
    <string name="act1_or_login">Or login with:</string>

    <string name="act1_ig">Instagram</string>
    <string name="act1_fb">Facebook</string>
    <string name="act1_apple">Apple ID</string>
    <string name="act1_google">Google Plus</string>

    <!-- activity_sing_up -->
    <string name="act2_username">Username</string>
    <string name="act2_singup">SING UP</string>
    <string name="act2_error">LATHOS MLK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings_2_">Settings_2_Activity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings_1_">Settings_1_Activity</string>
    <string name="title_activity_maps">Map</string>
</resources>